feat: integrate MinIO for video and thumbnail storage
- Added MinIO as an object storage solution for handling video and thumbnail files.
- Removed local file handling in the uploads API route.
- Updated VideoService to upload and delete videos and thumbnails from MinIO.
- Modified video and thumbnail paths to use MinIO URLs.
- Created setupBuckets script to initialize MinIO buckets with appropriate policies.
- Added MinIO service configuration to docker-compose.
- Implemented utility functions to generate video and thumbnail URLs.

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 DATABASE_URL="file:./dev.db"
+NEXT_PUBLIC_MINIO_ENDPOINT=127.0.0.1
+NEXT_PUBLIC_MINIO_PORT=9000
+MINIO_ACCESS_KEY=YOUR_MINIO_ACCESS_KEY
+MINIO_SECRET_KEY=YOUR_MINIO_SECRET_KEY
