--- a/package.json
+++ b/package.json
@@ -7,49 +7,55 @@
         "dev": "next dev --turbopack",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "pretest": "MINIO_ACCESS_KEY=MINIO_MOCK_ACCESS_KEY MINIO_SECRET_KEY=MINIO_MOCK_SECRET_KEY docker-compose up -d",
+        "test": "vitest",
+        "posttest": "docker-compose down"
     },
     "dependencies": {
         "@hookform/resolvers": "^4.1.3",
         "@prisma/client": "6.5.0",
-        "@radix-ui/react-avatar": "^1.1.3",
-        "@radix-ui/react-context-menu": "^2.2.6",
-        "@radix-ui/react-dialog": "^1.1.6",
-        "@radix-ui/react-label": "^2.1.2",
-        "@radix-ui/react-progress": "^1.1.2",
-        "@radix-ui/react-slot": "^1.1.2",
-        "@radix-ui/react-tabs": "^1.1.3",
-        "axios": "^1.8.4",
+        "@radix-ui/react-avatar": "^1.1.7",
+        "@radix-ui/react-context-menu": "^2.2.12",
+        "@radix-ui/react-dialog": "^1.1.11",
+        "@radix-ui/react-label": "^2.1.4",
+        "@radix-ui/react-progress": "^1.1.4",
+        "@radix-ui/react-slot": "^1.2.0",
+        "@radix-ui/react-tabs": "^1.1.9",
+        "axios": "^1.9.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
         "lucide-react": "^0.483.0",
         "minio": "^8.0.5",
-        "next": "15.2.4",
+        "next": "15.3.1",
         "next-auth": "5.0.0-beta.25",
         "next-themes": "^0.4.6",
         "nextjs-toploader": "^3.8.16",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
-        "react-hook-form": "^7.54.2",
-        "sonner": "^2.0.1",
-        "tailwind-merge": "^3.0.2",
-        "tw-animate-css": "^1.2.4",
-        "zod": "^3.24.2"
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
+        "react-hook-form": "^7.56.1",
+        "sonner": "^2.0.3",
+        "tailwind-merge": "^3.2.0",
+        "tw-animate-css": "^1.2.8",
+        "zod": "^3.24.3"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.3.1",
-        "@tailwindcss/postcss": "^4.0.17",
-        "@types/node": "^20.17.28",
-        "@types/react": "^19.0.12",
-        "@types/react-dom": "^19.0.4",
+        "@tailwindcss/postcss": "^4.1.4",
+        "@types/node": "^20.17.32",
+        "@types/react": "^19.1.2",
+        "@types/react-dom": "^19.1.2",
+        "@vitest/coverage-v8": "^3.1.2",
         "dotenv": "^16.5.0",
-        "eslint": "^9.23.0",
+        "eslint": "^9.25.1",
         "eslint-config-next": "15.2.3",
-        "prisma": "^6.5.0",
-        "tailwindcss": "^4.0.17",
-        "tsx": "^4.19.3",
-        "typescript": "^5.8.2"
+        "jsdom": "^26.1.0",
+        "prisma": "^6.7.0",
+        "tailwindcss": "^4.1.4",
+        "tsx": "^4.19.4",
+        "typescript": "^5.8.3",
+        "vitest": "^3.1.2"
     },
     "pnpm": {
         "onlyBuiltDependencies": [
@@ -57,7 +63,8 @@
             "@prisma/engines",
             "esbuild",
             "prisma",
-            "sharp"
+            "sharp",
+            "unrs-resolver"
         ]
     }
 }
