feat: switch database from SQLite to PostgreSQL

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgresql://nottube-admin:YOUR_POSTGRES_PASSWORD@localhost:5432/nottube"
+POSTGRES_USERNAME="nottube-admin"
+POSTGRES_PASSWORD="YOUR_POSTGRES_PASSWORD"
+POSTGRES_DB_NAME="nottube"
 NEXT_PUBLIC_MINIO_ENDPOINT=127.0.0.1
 NEXT_PUBLIC_MINIO_PORT=9000
 MINIO_ACCESS_KEY=YOUR_MINIO_ACCESS_KEY
